<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewGuessOneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_1"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewGuessOneValue"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/textViewGuessOneValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/guess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <EditText
        android:id="@+id/textViewWordGuess"
        android:layout_width="278dp"
        android:layout_height="52dp"
        android:hint="@string/enter_a_four_letter_guess_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        android:autofillHints="Enter a four letter word guess"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewGuessTwoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_2"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textViewWordGuess"
        app:layout_constraintEnd_toStartOf="@+id/textViewGuessTwoValue"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <TextView
        android:id="@+id/textViewGuessTwoValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <TextView
        android:id="@+id/textViewGuessThreeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_3"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textViewWordGuess"
        app:layout_constraintEnd_toStartOf="@+id/textViewGuessThreeValue"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGuessTwoTitle"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/textViewGuessThreeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGuessTwoValue"
        app:layout_constraintVertical_bias="0.309" />

    <TextView
        android:id="@+id/textViewGuessOneCheckTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_1_check"
        android:visibility="invisible"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewGuessTwoTitle"
        app:layout_constraintEnd_toStartOf="@+id/textViewGuessOneCheckValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGuessOneTitle" />

    <TextView
        android:id="@+id/textViewGuessOneCheckValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewGuessTwoValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGuessOneValue"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/textViewGuessTwoCheckTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_2_check"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textViewGuessThreeTitle"
        app:layout_constraintEnd_toStartOf="@+id/textViewGuessTwoCheckValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGuessTwoTitle" />

    <TextView
        android:id="@+id/textViewGuessTwoCheckValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewGuessThreeValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGuessTwoValue" />

    <TextView
        android:id="@+id/textViewGuessThreeCheckTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_3_check"
        android:visibility="invisible"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewWordGuess"
        app:layout_constraintEnd_toStartOf="@+id/textViewGuessThreeCheckValue"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGuessThreeTitle"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:id="@+id/textViewGuessThreeCheckValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGuessThreeValue"
        app:layout_constraintVertical_bias="0.253" />

    <TextView
        android:id="@+id/textViewShowWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewWordGuess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902" />


</android.support.constraint.ConstraintLayout>